[package]
name = "wwhd-trainer"
version = "0.5.0"
edition = "2021"
authors = ["29th-Day"]
license = "GPL3"

[dependencies]
wut = { git = "https://github.com/rust-wiiu/wut", tag = "v0.3.0" }
wups = { git = "https://github.com/rust-wiiu/wups", tag = "v0.3.0" }
overlay = { git = "https://github.com/rust-wiiu/overlay", tag = "v0.3.0" }
notifications = { git = "https://github.com/rust-wiiu/notifications", tag = "v0.3.0" }
