[package]
name = "wwhd-trainer"
description = "On-console Wind Waker HD Trainer"
version = "0.5.0"
edition = "2021"
authors = ["29th-Day"]
license-file = "LICENSE"
repository = "https://github.com/rust-wiiu/wwhd-trainer"
publish = false

[dependencies]
wut = { git = "https://github.com/rust-wiiu/wut", tag = "v0.3.0" }
wups = { git = "https://github.com/rust-wiiu/wups", tag = "v0.3.2" }
overlay = { git = "https://github.com/rust-wiiu/overlay", tag = "v0.3.1" }
notifications = { git = "https://github.com/rust-wiiu/notifications", tag = "v0.3.0" }
wupf = { git = "https://github.com/rust-wiiu/wupf", tag = "v0.3.3" }
